# reasoning-agents-challenge

./: .env.example  .gitignore  Dockerfile  README.md  agent.manifest.yaml  azure.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_scenarios.py
agents/: __init__.py  assessment_agent.py  base.py  engagement_agent.py  learning_path_curator.py  manager_insights_agent.py  mission_control.py  policy_guard.py  study_plan_generator.py  tools.py  verifier.py
data/: learner_performance.json  semantic_model.json  work_activity_signals.json
docs/: Agent Framework.md  FeedbackFromAI.md  ReasoningTechniques.md  certification_guide.md  challengeDetails.md  corporate_learning_policy.md  engineering_certification_guide.md  newPlan.md  quarterly_learning_report.md  sampleReadMe.md  team_learning_report.md  workload_insights.md
src/reasoning_agents_starter/: __init__.py  cli.py  config.py  foundry_cloud.py  models.py
src/reasoning_agents_starter/agents/: __init__.py  assessment.py  curator.py  engagement.py  insights.py  orchestrator.py  planner.py
